   
===========
Changes log  
===========

- @version-full@ (@release-date@)
    - API changes
    - Enhancements
        - UniformResource#doCatch now extract the cause exception from
          caught ResourceException instance for easier debugging.
    - Bugs fixed
        - Fixed compilation issue in the ClientResource class for the
          GWT edition. Reported by Laszlo Megyer. 
        - Fixed internal client connector that removes the query part 
          of the target resource reference.
          Reported by Laurent Rustuel.
        - Fixed internal connector that was not setting properly the 
          ServerInfo. Reported by Laurent Rustuel.
        - Fixed regression when tunnelling user agent properties.
          Reported by Fabian Mandelbaum.
        - The 0 value of the "TimeToLive" parameter for the client 
          connectors was badly taken into account when setting the 
          expiration date. Reported by Fabian Mandelbaum.
        - Fixed issue with line breaks that were removed when PUTting 
          a file. Contributed by Daniel Truemper.
    - Misc
        - 
        
- 2.0 Milestone 7 (2010-01-29)
    - API changes
        - Added more specific Validator#validatePresence and 
          validateFormat methods.
        - Added Protocol#SIP and SIPS constants.
        - Added Response#abort() and Request#abort() methods.
        - Added Response#commit() and Request#commit(Response) methods
          to support provisional responses and asynchronous replies.
        - Added Response#autoCommitting and committed boolean 
          properties for asynchronous processing of responses.
        - Added Status#isGlobalError() methods for 6xx range 
          (SIP protocol).
        - Removed "onContinue" property on Message introduced in 
          2.0 M6 until real use cases are identified. 
        - Added Protocol#technicalName property to indicate the actual
          name used on the wire, such as "HTTP" for Protocol#HTTPS.